--- a/v00/Makefile
+++ b/v00/Makefile
@@ -4,14 +4,14 @@ ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c ft_strrchr.c ft_
 ft_calloc.c ft_strdup.c ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c \
 ft_putendl_fd.c ft_putnbr_fd.c
 
-OBJS	:= ${SRCS:.c=.o} #Convert all *.c to *.o It actually says '$(CC) -c $(CFLAGS) $(CPPFLAGS). This an implicit rule'
+OBJS	:= ${SRCS:.c=.o}
 CFLAGS	:= -Wall -Wextra -Werror
 CC		:= gcc
-BON_SRC := ft_lstadd_back.c ft_lstadd_front.c ft_lstclear.c ft_lstdelone.c ft_lstiter.c ft_lstlast.c ft_lstmap.c ft_lstnew.c ft_lstsize.c
+BON_SRC := ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
 BON_OBJ := ${BON_SRC:.c=.o}
 
 ${NAME}:	${OBJS}
-			ar -crs ${NAME} ${OBJS}			
+			ar -crs ${NAME} ${OBJS}
 
 all:		${NAME}
 
