--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "functional": "c",
-        "stddef.h": "c"
+        "stddef.h": "c",
+        "libft.h": "c"
     }
 }
